<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/teamA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_a"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scoreA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textSize="64sp" />

                    <Button
                        android:id="@+id/point3A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick3A"
                        android:padding="16dp"
                        android:text="@string/_3_points"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/point2A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick2A"
                        android:padding="16dp"
                        android:text="@string/_2_points"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/freeThrowA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick1A"
                        android:padding="16dp"
                        android:text="@string/free_throw"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/teamB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/team_b"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scoreB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp"
                        android:text="@string/_0"
                        android:textAlignment="center"
                        android:textSize="64sp" />

                    <Button
                        android:id="@+id/point3B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick3B"
                        android:padding="16dp"
                        android:text="@string/_3_points"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/point2B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick2B"
                        android:padding="16dp"
                        android:text="@string/_2_points"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/freeThrowB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#FF8900"
                        android:onClick="onClick1B"
                        android:padding="16dp"
                        android:text="@string/free_throw"
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.constraint.ConstraintLayout>



            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/reset"
                    android:layout_width="99dp"
                    android:layout_height="38dp"
                    android:backgroundTint="#FF8900"
                    android:onClick="reset"
                    android:text="@string/reset"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.406" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

</ScrollView>